logs/offboard_pkg/build.make.164.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::GetRosData()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:35:16: error: ‘class std::vector<TaskManager>’ has no member named ‘RosData’
   35 |         uav[i].RosData(s);
      |                ^~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
